infra/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-test-service
spec:
  selector:
    name: node-test
  ports:
  - name: http
    protocol: TCP
    port: 3000
    targetPort: 3000
  type: ClusterIP
