infra/templates/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: test-route
  labels:
    app.kubernetes.io/managed-by: Helm
spec:
  to:
    kind: Service
    name: node-test-service
  tls: null
  port:
    targetPort: http
